--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
       }
 
       div#pattern {  
-        width: 400px; 
+        width: 200px; 
         white-space: nowrap; 
         overflow-x:scroll; 
+      }
+
+      img {
+        width: 50px;
+        height: 50px;
       }
     </style>
 
@@ -56,7 +61,7 @@
         renderer = new THREE.WebGLRenderer( { antialias: true } );
         renderer.setClearColor( 0xfff4e5 );
         //renderer.setSize( window.innerWidth, window.innerHeight );
-        renderer.setSize(200, 200);
+        renderer.setSize(600, 200);
         renderer.sortObjects = false;
 
         container.appendChild( renderer.domElement );
@@ -96,7 +101,7 @@
 
       var categories = ["images/icon-info.png","images/icon-info.png","images/icon-info.png"];
       var styles = [
-        ["images/icon-info.png","images/icon-info.png"],
+        ["images/beiou_1.png","images/beiou_2.png","images/beiou_3.png","images/beiou_4.png","images/beiou_5.png"],
         ["images/icon-info.png","images/icon-info.png","images/icon-info.png"],
         ["images/icon-info.png","images/icon-info.png","images/icon-info.png","images/icon-info.png"]
       ];
